--- a/index.css
+++ b/index.css
@@ -105,6 +105,7 @@ body {
     grid-template-rows: min-content 1fr;
     background-size: cover;
     background-position: bottom center;
+    overflow-x: hidden;
 }
 
 /* make images easier to work with */
@@ -154,6 +155,10 @@ select {
 
 .block {
     display: block;
+}
+
+.hidden {
+    display: none;
 }
 
 .items-center {
@@ -215,10 +220,6 @@ select {
         padding-bottom: max(6rem, 20vh);
         align-items: end;
     }
-}
-
-.hidden {
-    display: none;
 }
 
 /* Screen Reader Only Utility */
@@ -387,10 +388,66 @@ select {
 }
 
 .primary-navigation {
-    --gap: 8rem;
+    position: relative;
     --underline-gap: 2rem;
     padding: 0;
     margin: 0;
+    background-color: hsl(var(--clr-dark) / 0.95);
+}
+
+@supports (backdrop-filter: blur(4rem)) or (-webkit-backdrop-filter: blur(4rem)) {
+    .primary-navigation {
+        background-color: hsl(var(--clr-white) / 0.01);
+        backdrop-filter: blur(4rem);
+    }
+}
+
+@media (max-width: 35rem) {
+    .primary-navigation {
+        --underline-gap: 1rem;
+        flex-direction: column;
+        position: fixed;
+        z-index: 1000;
+        inset: 0 0 0 28%;
+        padding: min(20rem, 15vh) 2rem;
+        margin: 0;
+        font-size: var(--fs-600);
+        transform: translateX(100%);
+        transition: transform 200ms ease-in-out;
+        visibility: hidden;
+    }
+
+    .primary-navigation.underline-indicators > .active {
+        border: 0;
+    }
+
+    .large-button {
+        padding: 0 0.8em;
+    }
+
+    .primary-navigation[data-visible="true"] {
+        visibility: visible;
+        transform: translateX(calc(100% - 22rem));
+        transition: transform 500ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    }
+
+    .mobile-nav-toggle {
+        display: block;
+        position: absolute;
+        top: 2rem;
+        right: 1rem;
+        z-index: 1001;
+        background: url(/assets/shared/icon-hamburger.svg) no-repeat center
+            center transparent;
+        aspect-ratio: 1;
+        width: 1.5rem;
+        border: none;
+        cursor: pointer;
+    }
+
+    .mobile-nav-toggle-close {
+        display: none;
+    }
 }
 
 .primary-navigation a > span {
@@ -488,14 +545,5 @@ body {
 /* Navigation */
 
 .primary-header {
-    padding: 2rem 0 0 4rem;
-}
-
-.glass-container {
-    position: relative;
-    display: flex;
-    background: hsl(var(--clr-white) / 0.05);
-    backdrop-filter: blur(1.5rem);
-    padding: 0 4rem;
-    justify-content: flex-end;
+    padding: 1.5rem 0 0 1.5rem;
 }
