--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
     --fs-800: 3.5rem;
     --fs-700: 1.5rem;
     --fs-600: 1rem;
-    --fs-500: 1.75rem;
+    --fs-500: 1rem;
     --fs-400: 0.9375rem;
     --fs-300: 1rem;
     --fs-200: 0.875rem;
@@ -25,25 +25,25 @@
     --ff-sans-normal: "Barlow", sans-serif;
 }
 
-@media (min-width: 35em) {
+@media (width >= 35em) {
     /* font-sizes - Mobile */
     :root {
         --fs-800: 5rem;
         --fs-700: 2.5rem;
         --fs-600: 1.5rem;
+        --fs-500: 1.25rem;
         --fs-400: 1rem;
     }
 }
 
-@media (min-width: 45em) {
+@media (width >= 45em) {
     /* font-sizes - Desktop */
     :root {
         --fs-800: 6.25rem;
         --fs-700: 3.5rem;
         --fs-600: 2rem;
+        --fs-500: 1.75rem;
         --fs-400: 1.125rem;
-        --fs-300: 1rem;
-        --fs-200: 0.875rem;
     }
 }
 
@@ -97,13 +97,11 @@ body {
     font-family: var(--ff-sans-normal);
     font-size: var(--fs-400);
     background-color: hsl(var(--clr-dark));
-    color: hsl(var(--clr-white));
     line-height: 1.5;
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     display: grid;
     grid-template-rows: min-content 1fr;
-    background-size: cover;
     background-position: bottom center;
     overflow-x: hidden;
 }
@@ -187,41 +185,6 @@ select {
     max-width: 80rem;
 }
 
-.grid-container {
-    display: grid;
-    text-align: center;
-    place-items: center;
-    padding-inline: 1rem;
-}
-
-.grid-container * {
-    max-width: 50ch;
-}
-
-@media (min-width: 45rem) {
-    .grid-container {
-        text-align: left;
-        column-gap: var(--container-gap, 2rem);
-        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
-                2rem,
-                1fr
-            );
-    }
-
-    .grid-container > *:first-child {
-        grid-column: 2;
-    }
-
-    .grid-container > *:last-child {
-        grid-column: 3;
-    }
-
-    .grid-container--home {
-        padding-bottom: max(6rem, 20vh);
-        align-items: end;
-    }
-}
-
 /* Screen Reader Only Utility */
 .sr-only {
     position: absolute;
@@ -233,6 +196,23 @@ select {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+}
+
+.skip-to-content {
+    position: absolute;
+    z-index: 10000;
+    background: hsl(var(--clr-white));
+    color: (hsl(var(--clr-dark)));
+    padding: 0.5em 1em;
+    margin-inline: auto;
+    transform: translateY(-105%);
+    transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    outline: 3px solid black;
+    color: blue;
+}
+
+.skip-to-content:focus {
+    transform: translateY(0%);
 }
 
 /* Typography */
@@ -335,7 +315,6 @@ select {
 .cursor-pointer {
     cursor: pointer;
 }
-
 /* Numbered Titles */
 
 .numbered-title {
@@ -352,9 +331,9 @@ select {
     color: hsl(var(--clr-white) / 0.25);
 }
 
-/* ------------------ */
-/* Components  */
-/* ------------------ */
+/* ?------------------ */
+/* ?   Components      */
+/* ?------------------ */
 
 .large-button {
     font-size: 2rem;
@@ -363,6 +342,7 @@ select {
     display: inline-grid;
     place-items: center;
     z-index: 1;
+    outline: none;
     /* Aspect Ratio replaces height/width with a fraction.  1 = 1/1  */
     aspect-ratio: 1;
 }
@@ -387,22 +367,40 @@ select {
     opacity: 1;
 }
 
+.big-word {
+    padding-block: 2rem;
+}
+
+/* ?----------------------------- */
+/* ? Primary Navigation Component */
+/* ?----------------------------- */
+
+.logo {
+    margin: 2rem clamp(1.5rem, 5vw, 3.5rem);
+}
+
 .primary-navigation {
     position: relative;
+    --gap: 4rem clamp(2rem, 50vw, 2rem);
     --underline-gap: 2rem;
-    padding: 0;
+    padding-inline: 3rem;
     margin: 0;
     background-color: hsl(var(--clr-dark) / 0.95);
 }
 
+.primary-navigation a > span {
+    margin-right: 0.5em;
+    font-weight: 700;
+}
+
 @supports (backdrop-filter: blur(4rem)) or (-webkit-backdrop-filter: blur(4rem)) {
     .primary-navigation {
-        background-color: hsl(var(--clr-white) / 0.01);
+        background-color: hsl(var(--clr-white) / 0.1);
         backdrop-filter: blur(4rem);
     }
 }
 
-@media (max-width: 35rem) {
+@media (width <= 35rem) {
     .primary-navigation {
         --underline-gap: 1rem;
         flex-direction: column;
@@ -413,8 +411,7 @@ select {
         margin: 0;
         font-size: var(--fs-600);
         transform: translateX(100%);
-        transition: transform 200ms ease-in-out;
-        visibility: hidden;
+        transition: transform 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
     }
 
     .primary-navigation.underline-indicators > .active {
@@ -426,9 +423,8 @@ select {
     }
 
     .primary-navigation[data-visible="true"] {
-        visibility: visible;
-        transform: translateX(calc(100% - 22rem));
-        transition: transform 500ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+        transform: translateX(0%);
+        transition: transform 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
     }
 
     .mobile-nav-toggle {
@@ -445,14 +441,44 @@ select {
         cursor: pointer;
     }
 
-    .mobile-nav-toggle-close {
+    .mobile-nav-toggle:focus-visible {
+        outline: 2px solid lightblue !important;
+    }
+}
+
+@media (width >= 35em) {
+    .primary-navigation {
+        padding-inline: clamp(3rem, 7vw, 9rem);
+    }
+}
+
+@media (35em <= width <= 45em) {
+    .primary-navigation a > span {
         display: none;
     }
 }
 
-.primary-navigation a > span {
-    margin-right: 0.5em;
-    font-weight: 700;
+@media (width >= 45em) {
+    .primary-header::before {
+        content: "";
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 1px;
+        z-index: 1;
+        background: hsl(var(--clr-white) / 0.2);
+        margin-left: 2.3rem;
+        order: 1;
+    }
+
+    nav {
+        margin-left: -3rem;
+        order: 2;
+    }
+
+    .primary-navigation {
+        margin-block: 2rem;
+    }
 }
 
 .underline-indicators > * {
@@ -516,9 +542,9 @@ select {
     color: hsl(var(--clr-dark) / 1);
 }
 
-/* ------------------------- */
-/* Page Specific backgrounds */
-/* ------------------------- */
+/* ?-------------------------- */
+/* ? Page Specific backgrounds */
+/* ?-------------------------- */
 
 body {
     background-position: bottom center;
@@ -530,20 +556,171 @@ body {
     background-image: url(/assets/home/background-home-mobile.jpg);
 }
 
-@media (min-width: 376px) {
+.moon {
+    background-image: url(/assets/destination/background-destination-mobile.jpg);
+}
+
+@media (width >= 376px) {
     .home {
         background-image: url(/assets/home/background-home-tablet.jpg);
+        background-position: center center;
+    }
+
+    .moon {
+        background-image: url(/assets/destination/background-destination-tablet.jpg);
+        background-position: center center;
     }
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
     .home {
         background-image: url(/assets/home/background-home-desktop.jpg);
     }
+
+    .moon {
+        background-image: url(/assets/destination/background-destination-desktop.jpg);
+    }
 }
 
-/* Navigation */
+/* ?------------------------- */
+/* ?        Layout            */
+/* ?------------------------- */
 
-.primary-header {
-    padding: 1.5rem 0 0 1.5rem;
+.grid-container {
+    display: grid;
+    text-align: center;
+    place-items: center;
+    padding-inline: 1rem;
+    padding-bottom: 4rem;
+}
+
+.grid-container p:not([class]) {
+    max-width: 50ch;
+    outline: 1px solid green;
+}
+
+.numbered-title {
+    grid-area: title;
+}
+
+/* Destination Layout */
+
+.grid-container--destination {
+    --flow-space: 5rem;
+    grid-template-areas:
+        "title"
+        "image"
+        "tabs"
+        "content";
+}
+
+.grid-container--destination > img {
+    grid-area: image;
+    max-width: 60%;
+}
+
+.grid-container--destination > .tab-list {
+    grid-area: tabs;
+    gap: 2rem;
+}
+
+.grid-container--destination > .tab-list * {
+    background-color: transparent;
+}
+
+.grid-container--destination > .destination-info {
+    grid-area: content;
+}
+
+.destination-info > p {
+    line-height: 25px;
+    
+}
+
+.destination-meta {
+    flex-direction: column;
+    border-top: 1px solid hsl(var(--clr-white) / 0.1);
+    padding-top: 2rem;
+    margin-top: 4rem;
+}
+
+.destination-meta div * {
+    padding: .5rem 0;
+}
+
+
+.destination-meta {
+    font-size: var(--fs-500)
+}
+
+/*  ?Media Queries for Destinations */
+
+@media (width >= 35em) {
+    .numbered-title {
+        justify-self: start;
+        margin-block-start: 2rem;
+    }
+
+    .destination-meta {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .destination-info > p {
+        line-height: 28px;
+    }
+}
+
+@media (width >= 45rem) {
+    
+
+    .grid-container {
+        text-align: left;
+        column-gap: var(--container-gap, 2rem);
+        grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(
+                2rem,
+                1fr
+            );
+    }
+
+    .grid-container--home {
+        padding-bottom: max(6rem, 20vh);
+        align-items: end;
+    }
+
+    .grid-container--home > *:first-child {
+        grid-column: 2;
+    }
+
+    .grid-container--home > *:last-child {
+        grid-column: 3;
+    }
+
+    .grid-container div p {
+        padding-right: 4rem;
+    }
+
+    .grid-container--destination {
+        align-content: start;
+        justify-items: start;
+        grid-template-areas:
+            ". title title ."
+            ". image tabs ."
+            ". image content .";
+    }
+
+    .grid-container--destination > img {
+        max-width: 90%;
+    }
+
+    .destination-info > p {
+        line-height: 32px;
+    }
+
+    .destination-meta {
+        --gap: min(4vw, 6rem;);
+        justify-content: start;
+    }
+
+    
 }
