finished destination page1, added animation. finished first ctew page

--- a/index.css
+++ b/index.css
@@ -2,14 +2,14 @@
 /* Custom Properties  */
 /* ------------------ */
 :root {
-    /* Font Size - Tablet */
+    /* Font Size - Mobile */
     /* Design Font in Pixels Divided by 16(1rem).... 100 / 16 = 9.375 -- 125 / 16 = 6.25*/
     /* FS-900(mimics font-weight syntax, larger number is "heavier" text as-in greater font-size... */
     --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
     --fs-800: 3.5rem;
     --fs-700: 1.5rem;
     --fs-600: 1rem;
-    --fs-500: 1rem;
+    --fs-500: 1.75rem;
     --fs-400: 0.9375rem;
     --fs-300: 1rem;
     --fs-200: 0.875rem;
@@ -17,7 +17,7 @@
     /* Colors */
     --clr-dark: 230 35% 7%;
     --clr-white: 0 0% 100%;
-    --clr-light: 231 77% 90%;
+    --clr-light: 231 79% 90%;
 
     /* Font-Families */
     --ff-serif: "Bellefair", serif;
@@ -26,12 +26,12 @@
 }
 
 @media (width >= 35em) {
-    /* font-sizes - Mobile */
+    /* font-sizes - Tablet*/
     :root {
         --fs-800: 5rem;
         --fs-700: 2.5rem;
         --fs-600: 1.5rem;
-        --fs-500: 1.25rem;
+        --fs-500: 1.75rem;
         --fs-400: 1rem;
     }
 }
@@ -44,6 +44,34 @@
         --fs-600: 2rem;
         --fs-500: 1.75rem;
         --fs-400: 1.125rem;
+    }
+}
+
+@keyframes opacityAnimation {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes rotateAnimate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
 
@@ -395,8 +423,8 @@ select {
 
 @supports (backdrop-filter: blur(4rem)) or (-webkit-backdrop-filter: blur(4rem)) {
     .primary-navigation {
-        background-color: hsl(var(--clr-white) / 0.1);
-        backdrop-filter: blur(4rem);
+        background-color: hsl(var(--clr-white) / 0.09);
+        backdrop-filter: blur(5rem);
     }
 }
 
@@ -411,7 +439,7 @@ select {
         margin: 0;
         font-size: var(--fs-600);
         transform: translateX(100%);
-        transition: transform 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition: transform 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
     }
 
     .primary-navigation.underline-indicators > .active {
@@ -424,7 +452,7 @@ select {
 
     .primary-navigation[data-visible="true"] {
         transform: translateX(0%);
-        transition: transform 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition: transform 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
     }
 
     .mobile-nav-toggle {
@@ -560,6 +588,10 @@ body {
     background-image: url(/assets/destination/background-destination-mobile.jpg);
 }
 
+.crew {
+    background-image: url(/assets/crew/background-crew-mobile.jpg);
+}
+
 @media (width >= 376px) {
     .home {
         background-image: url(/assets/home/background-home-tablet.jpg);
@@ -568,6 +600,11 @@ body {
 
     .moon {
         background-image: url(/assets/destination/background-destination-tablet.jpg);
+        background-position: center center;
+    }
+
+    .crew {
+        background-image: url(/assets/crew/background-crew-tablet.jpg);
         background-position: center center;
     }
 }
@@ -579,6 +616,10 @@ body {
 
     .moon {
         background-image: url(/assets/destination/background-destination-desktop.jpg);
+    }
+
+    .crew {
+        background-image: url(/assets/crew/background-crew-desktop.jpg);
     }
 }
 
@@ -614,9 +655,11 @@ body {
         "content";
 }
 
-.grid-container--destination > img {
+.grid-container--destination > picture {
     grid-area: image;
     max-width: 60%;
+    transition: opacityAnimation 0.5s;
+    animation: opacityAnimation 0.5s, rotateAnimate 85s linear infinite;
 }
 
 .grid-container--destination > .tab-list {
@@ -634,7 +677,6 @@ body {
 
 .destination-info > p {
     line-height: 25px;
-    
 }
 
 .destination-meta {
@@ -645,15 +687,58 @@ body {
 }
 
 .destination-meta div * {
-    padding: .5rem 0;
+    padding: 0.5rem 0;
 }
 
-
-.destination-meta {
-    font-size: var(--fs-500)
+.destination-meta p {
+    font-size: var(--fs-500);
 }
 
-/*  ?Media Queries for Destinations */
+/* Crew Layout */
+
+/* Mobile */
+
+.grid-container--crew {
+    --flow-space: 2rem;
+    grid-template-areas:
+        "title"
+        "image"
+        "tabs"
+        "content";
+}
+
+.grid-container--crew > picture {
+    grid-area: image;
+    place-content: center;
+    max-width: 100%;
+    border-bottom: 1px solid hsl(var(--clr-white) / 0.1);
+}
+
+.grid-container--crew > picture > img {
+    max-width: 60%;
+    margin: auto;
+}
+
+.grid-container--crew > .dot-indicators {
+    grid-area: tabs;
+    place-content: center;
+}
+
+.grid-container--crew > .crew-details {
+    grid-area: content;
+}
+
+.crew-details > p {
+    line-height: 25px;
+}
+
+.numbered-title {
+    font-size: 1rem;
+}
+
+/*? Media Queries for Layouts ?*/
+
+/* Tablet screens */
 
 @media (width >= 35em) {
     .numbered-title {
@@ -669,11 +754,32 @@ body {
     .destination-info > p {
         line-height: 28px;
     }
+
+    .grid-container--crew {
+        padding-bottom: 0;
+        grid-template-areas:
+            "title"
+            "content"
+            "tabs"
+            "image";
+    }
+
+    .numbered-title {
+        font-size: 1.25rem;
+    }
+
+    .grid-container--crew > picture {
+        align-self: end;
+    }
+
+    .grid-container--crew picture img {
+        max-width: 80%;
+    }
 }
 
-@media (width >= 45rem) {
-    
+/* Large Screens */
 
+@media (width >= 45rem) {
     .grid-container {
         text-align: left;
         column-gap: var(--container-gap, 2rem);
@@ -709,7 +815,8 @@ body {
             ". image content .";
     }
 
-    .grid-container--destination > img {
+    .grid-container--destination > picture,
+    .grid-container--crew > picture {
         max-width: 90%;
     }
 
@@ -722,5 +829,30 @@ body {
         justify-content: start;
     }
 
-    
+    .grid-container--crew {
+        grid-template-areas:
+            ". title title ."
+            ". content image ."
+            ". tabs image .";
+    }
+
+    .crew-details > p {
+        line-height: 32px;
+    }
+
+    .crew-details > .special {
+        line-height: 4rem;
+    }
+
+    .grid-container--crew > .dot-indicators {
+        justify-self: start;
+    }
+
+    .grid-container--crew > picture {
+        align-self: end;
+    }
+
+    .grid-container--crew > picture > img {
+        max-width: 90%;
+    }
 }
