--- a/index.css
+++ b/index.css
@@ -132,13 +132,13 @@ body {
     grid-template-rows: min-content 1fr;
     background-position: bottom center;
     overflow-x: hidden;
+    scrollbar-gutter: stable;
 }
 
 /* make images easier to work with */
 
 img,
 picture {
-    display: block;
     max-width: 100%;
 }
 
@@ -205,6 +205,10 @@ select {
 
 .flow > *:where(:not(:first-child)) {
     margin-top: var(--flow-space, 1rem);
+}
+
+.flow--space-small {
+    --flow-space: 0.75rem;
 }
 
 .container {
@@ -306,6 +310,10 @@ select {
 .fs-700,
 .fs-600 {
     line-height: 1.1;
+}
+
+.balance {
+    text-wrap: balance;
 }
 
 /* Color Utils  */
@@ -592,6 +600,10 @@ body {
     background-image: url(/assets/crew/background-crew-mobile.jpg);
 }
 
+.tech {
+    background-image: url(/assets/technology/background-technology-mobile.jpg);
+}
+
 @media (width >= 376px) {
     .home {
         background-image: url(/assets/home/background-home-tablet.jpg);
@@ -607,6 +619,10 @@ body {
         background-image: url(/assets/crew/background-crew-tablet.jpg);
         background-position: center center;
     }
+
+    .tech {
+        background-image: url(/assets/technology/background-technology-tablet.jpg);
+    }
 }
 
 @media (width >= 768px) {
@@ -620,6 +636,10 @@ body {
 
     .crew {
         background-image: url(/assets/crew/background-crew-desktop.jpg);
+    }
+
+    .tech {
+        background-image: url(/assets/technology/background-technology-desktop.jpg);
     }
 }
 
@@ -647,7 +667,7 @@ body {
 /* Destination Layout */
 
 .grid-container--destination {
-    --flow-space: 5rem;
+    --flow-space: 2rem;
     grid-template-areas:
         "title"
         "image"
@@ -658,6 +678,7 @@ body {
 .grid-container--destination > picture {
     grid-area: image;
     max-width: 60%;
+    align-self: start;
     transition: opacityAnimation 0.5s;
     animation: opacityAnimation 0.5s, rotateAnimate 85s linear infinite;
 }
@@ -717,6 +738,7 @@ body {
 .grid-container--crew > picture > img {
     max-width: 60%;
     margin: auto;
+    align-self: start;
 }
 
 .grid-container--crew > .dot-indicators {
@@ -734,6 +756,14 @@ body {
 
 .numbered-title {
     font-size: 1rem;
+}
+
+.crew-details {
+    flex-direction: column;
+}
+
+.crew-details h2 {
+    opacity: 50%;
 }
 
 /*? Media Queries for Layouts ?*/
@@ -815,8 +845,7 @@ body {
             ". image content .";
     }
 
-    .grid-container--destination > picture,
-    .grid-container--crew > picture {
+    .grid-container--destination > picture {
         max-width: 90%;
     }
 
@@ -830,6 +859,8 @@ body {
     }
 
     .grid-container--crew {
+        justify-content: start;
+        grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(1rem, 1fr);
         grid-template-areas:
             ". title title ."
             ". content image ."
@@ -849,6 +880,8 @@ body {
     }
 
     .grid-container--crew > picture {
+        grid-column: span 2;
+        max-width: 90%;
         align-self: end;
     }
 
